test/Fail/Polarity-pragma-out-of-scope.agda
{-# OPTIONS --warning=error #-}

postulate
  A : Set

module _ where

  {-# POLARITY A #-}
